--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,14 @@
 })();
     </script>
     <!--End of Tawk.to Script-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163581927-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-163581927-1');
+    </script>
   </body>
 </html>
