improve head for sharing

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title></title>
+    <meta itemprop="name">
+    <meta property="og:title">
+    <meta name="twitter:title">
+    <meta name="description"/>
+    <meta itemprop="description">
+    <meta property="og:description">
+    <meta name="twitter:description">
     <link href="https://fonts.googleapis.com/css?family=Gotu|Muli:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
   </head>
