fix favicons and try to add og:image tag

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <meta itemprop="description">
     <meta property="og:description">
     <meta name="twitter:description">
+    <meta property="og:image" content="https://www.calmanessahora.com.br/calma-nessa-hora.png" />
+
     <link href="https://fonts.googleapis.com/css?family=Gotu|Muli:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
   </head>
