Try to fix og:title

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title></title>
-    <meta itemprop="name" />
-    <meta property="og:title" />
-    <meta name="twitter:title" />
-    <meta name="description"/>
-    <meta itemprop="description" />
-    <meta property="og:description" />
-    <meta name="twitter:description" />
-    <meta property="og:image" content="<%= BASE_URL %>calma-nessa-hora.png" />
     <link href="https://fonts.googleapis.com/css?family=Gotu|Muli:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    <meta property="og:title" content="Calma Nessa Hora" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://www.calmanessahora.com.br" />
+    <meta property="og:image" content="https://www.calmanessahora.com.br/calma-nessa-hora.png" />
+    <meta property="og:description" content="Acolhimento em saúde gratuito para diminiur a sua ansiedade nestes tempos de COVID-19" />
   </head>
   <body>
     <noscript>
